force-app/main/default/objects/Territory__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <formula>IF( ISPICKVAL(City__c, &apos;Outskirts&apos;), Ironman__r.Outskirts_Assignment__c , Ironman__r.Daily_Assignment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>