force-app/main/default/objects/Territory__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BLR_GOP_1</fullName>
            </value>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>BLR_KAN_6</fullName>
            </value>
            <value>
                <fullName>BLR_HEB_5</fullName>
            </value>
            <value>
                <fullName>BLR_MUS_4</fullName>
            </value>
            <value>
                <fullName>BLR_WHI_3</fullName>
            </value>
            <value>
                <fullName>BLR_HSR_2</fullName>
            </value>
            <value>
                <fullName>CBE_ PLZ_1</fullName>
            </value>
            <value>
                <fullName>HYD_SHG_1</fullName>
            </value>
            <value>
                <fullName>MUM_THN_2</fullName>
            </value>
            <value>
                <fullName>HYD_BAN_2</fullName>
            </value>
            <value>
                <fullName>KOL_MAN_1</fullName>
            </value>
            <value>
                <fullName>CHE_CTY_2</fullName>
            </value>
            <value>
                <fullName>CHE_ OMR_1</fullName>
            </value>
            <value>
                <fullName>NCR_NOI_3</fullName>
            </value>
            <value>
                <fullName>NCR_GUR_1</fullName>
            </value>
            <value>
                <fullName>NCR_KRN_2</fullName>
            </value>
            <value>
                <fullName>PUN_BAN_1</fullName>
            </value>
            <value>
                <fullName>MUM_GOR_1</fullName>
            </value>
            <value>
                <fullName>BLR_BSR_7</fullName>
            </value>
            <value>
                <fullName>VIZ_SQRLT_1</fullName>
            </value>
            <value>
                <fullName>MYS_SQRLT_1</fullName>
            </value>
            <value>
                <fullName>KOL_CHI_2</fullName>
            </value>
            <value>
                <fullName>LKO_SQRLT_1</fullName>
            </value>
            <value>
                <fullName>PUN_VIM_2</fullName>
            </value>
            <value>
                <fullName>BAN_JPN_6</fullName>
            </value>
            <value>
                <fullName>SRT_SQRLT_1</fullName>
            </value>
            <value>
                <fullName>CHE_SQRLT_1</fullName>
            </value>
            <value>
                <fullName>CHE_ GST_3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>