force-app/main/default/objects/Territory__c/fields/Cluster_Brand__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Brand__c</fullName>
    <label>Cluster Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homelane</fullName>
                <default>true</default>
                <label>Homelane</label>
            </value>
            <value>
                <fullName>Doow up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>