force-app/main/default/objects/Territory__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Showroom_User__c</referenceTo>
    <relationshipLabel>Territories (Dealer)</relationshipLabel>
    <relationshipName>Territories2</relationshipName>
    <type>Lookup</type>
</CustomField>