force-app/main/default/objects/Territory__c/fields/Dealer_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Cluster__c</fullName>
    <label>Dealer Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>