force-app/main/default/objects/Territory__c/fields/Dealer_Showroom__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Showroom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Showroom</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Territories DFN</relationshipLabel>
    <relationshipName>TerritoriesDFN</relationshipName>
    <type>Lookup</type>
</CustomField>