force-app/main/default/objects/Territory__c/fields/Inside_Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales Agent</label>
    <referenceTo>Showroom_User__c</referenceTo>
    <relationshipLabel>Territories (Showroom User)</relationshipLabel>
    <relationshipName>Territories1</relationshipName>
    <type>Lookup</type>
</CustomField>