force-app/main/default/objects/Territory__c/fields/Inside_Sales_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Cluster__c</fullName>
    <label>Inside Sales Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INSALES_DOUP_BLR_1</fullName>
            </value>
            <value>
                <fullName>INSALES_BHU_1</fullName>
            </value>
            <value>
                <fullName>INSALES_ROTN_1</fullName>
            </value>
            <value>
                <fullName>INSALES_MYS_1</fullName>
            </value>
            <value>
                <fullName>INSALES_VIJ_VIZ</fullName>
            </value>
            <value>
                <fullName>INSALES_PUN_1</fullName>
            </value>
            <value>
                <fullName>INSALES_AHM_1</fullName>
            </value>
            <value>
                <fullName>INSALES_SUR_1</fullName>
            </value>
            <value>
                <fullName>INSALES_NOI</fullName>
            </value>
            <value>
                <fullName>InSales_Cluster_1_Mum</fullName>
            </value>
            <value>
                <fullName>InSales_Cluster_2_Viz</fullName>
            </value>
            <value>
                <fullName>InSales_Cluster_3_Ben</fullName>
            </value>
            <value>
                <fullName>InSales_Cluster_4_Ben_Che</fullName>
            </value>
            <value>
                <fullName>InSales_Cluster_5_Bhu</fullName>
            </value>
            <value>
                <fullName>InSales_Cluster_5_Mum/Bhu</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 6_Mum</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 1_BenMys</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 3_HydViz</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 5_KolBhu</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 10_Nag</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 7_Pun</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 8_Ahm</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 9_Koc</fullName>
            </value>
            <value>
                <fullName>DWP_Insales_Hyd</fullName>
            </value>
            <value>
                <fullName>DWP_Insales_Mys</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 2_CheRotn</fullName>
            </value>
            <value>
                <fullName>INSales_Cluster 4_NcrJaiLuc</fullName>
            </value>
            <value>
                <fullName>InSales_South</fullName>
            </value>
            <value>
                <fullName>InSales_North</fullName>
            </value>
            <value>
                <fullName>InSales_East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>