force-app/main/default/objects/Territory__c/fields/Iron_Man_Email__c.field-meta.xml
<CustomField>
    <fullName>Iron_Man_Email__c</fullName>
    <formula>Ironman__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Iron Man Email</label>
    <type>Text</type>
</CustomField>