force-app/main/default/objects/Territory__c/fields/Ironman__c.field-meta.xml
<CustomField>
    <fullName>Ironman__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ironman</label>
    <referenceTo>Showroom_User__c</referenceTo>
    <relationshipLabel>Territories</relationshipLabel>
    <relationshipName>Territories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>