force-app/main/default/objects/Territory__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>IF(OR(Ironman__r.Backlogs_Inactivity__c =True, Ironman__r.IsActive__c =False,Ironman__r.Reached_Daily_Limit__c = True,Ironman__r.Reached_Monthly_Limit__c = True),false,true)</description>
    <formula>IF ( ISPICKVAL(City__c, &apos;Outskirts&apos;),
IF(OR(Ironman__r.IsActive__c =False, Ironman__r.Reached_Outskirts_Monthly_Limit__c=true, Ironman__r.Reached_Outskirts_Limit__c =True ),false,true),

IF(OR(Ironman__r.Backlogs_Inactivity__c =True, Ironman__r.IsActive__c =False,Ironman__r.Reached_Daily_Limit__c = True,Ironman__r.Reached_Monthly_Limit__c = True),false,true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>