force-app/main/default/objects/Territory__c/fields/Lat_Long__c.field-meta.xml
<CustomField>
    <fullName>Lat_Long__c</fullName>
    <label>Lat Long</label>
    <required>true</required>
    <scale>13</scale>
    <type>Location</type>
</CustomField>