force-app/main/default/objects/Territory__c/fields/Monthly_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Assignment__c</fullName>
    <formula>If( ISPICKVAL( City__c , &apos;Outskirts&apos;), Ironman__r.Outskirts_Monthly_Assignment__c , Ironman__r.Monthly_Assignment__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>