force-app/main/default/objects/Territory__c/fields/WT_Leads_Daily_Assignment__c.field-meta.xml
<CustomField>
    <fullName>WT_Leads_Daily_Assignment__c</fullName>
    <formula>IF(ISNULL(Ironman__r.WT_Leads_Daily_Assignment__c),0,Ironman__r.WT_Leads_Daily_Assignment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WT Leads Daily Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>