force-app/main/default/objects/Territory__c/validationRules/Pincode_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Pincode_Numbers</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN(Pincode__c) &lt;&gt;6,NOT(ISNUMBER(Pincode__c)))</errorConditionFormula>
    <errorDisplayField>Pincode__c</errorDisplayField>
    <errorMessage>Please enter only 6 digit numbers!!</errorMessage>
</ValidationRule>