force-app/main/default/objects/Territory__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Assignment__c</columns>
    <columns>City__c</columns>
    <columns>Cluster__c</columns>
    <columns>Ironman__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Lat_Long__Latitude__s</columns>
    <columns>Lat_Long__Longitude__s</columns>
    <columns>Pincode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>