force-app/main/default/objects/Territory__c/listViews/Chennai_Territory.listView-meta.xml
<ListView>
    <fullName>Chennai_Territory</fullName>
    <columns>NAME</columns>
    <columns>Cluster__c</columns>
    <columns>Ironman__c</columns>
    <columns>Pincode__c</columns>
    <columns>City__c</columns>
    <columns>Assignment__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Lat_Long__Latitude__s</columns>
    <columns>Lat_Long__Longitude__s</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Chennai</value>
    </filters>
    <label>Chennai Territory</label>
    <language>en_US</language>
</ListView>